some errors with pointers

--- a/files/templates/verified.html
+++ b/files/templates/verified.html
@@ -7,8 +7,8 @@
     <body> 
         <p>
             Dear {{.FullName}}, <br><br>
-            Your Registration is successful. <br><br>
-            To continue, kindly verify your account using this code: {{.VerificationCode}} <br> 
+            Your Email is verified. <br><br>
+            Kindly login to continue using application<br> 
             Kind Regards, <br>
             Your friends at FGNC
         </p>
